--- a/package.json
+++ b/package.json
@@ -11,15 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
-    "fs": "^0.0.1-security",
-    "gulp": "^4.0.2",
-    "gulp-ejs": "^5.1.0",
-    "gulp-rename": "^2.0.0",
-    "mysql": "^2.18.1",
-    "twitter": "^1.7.1"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
